<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:background="@color/primary"
    android:scrollbars="none"
    tools:context=".activites.SignInActivity">
    
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/login_to_continue"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"/>

        <EditText
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:background="@color/input_background"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputEmail"/>


        <EditText
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:background="@color/input_background"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/inputPassword"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                app:cornerRadius="@dimen/_8sdp"
                android:text="@string/sign_in"
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"/>

        </FrameLayout>



        <TextView
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:text="@string/create_new_account"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textCreateNewAccount"/>

    </LinearLayout>

</ScrollView>